Adjuested size and position of spinner to avoid clipping in FF and Opera

--- a/css/styles.css
+++ b/css/styles.css
@@ -543,8 +543,8 @@ aside p + a {
 #spinner
 {
 	position:absolute;
-	top:20px;
-	left:65px;
+	top:8px;
+	left:55px;
 }
 	
 	
